# teseo2

./: DockerMakeEnvFile  DockerMakefile  Dockerfile  Dockerfile.alpine  Makefile  Makefile.Docker  Makefile.Docker.env  Makefile.env  README.md  README_H2D.md
DockerMount/data/: TeseoTestImage.xcf
DockerResources/: entrypoint.sh  id_rsa  id_rsa.pub  known_hosts
Documentation/Teseo2UserManual/: Makefile  Teseo2UserManual.bib  Teseo2UserManual.md  Teseo2UserManual.tex
gtk-addons/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  configure  configure.in  gtk-addons-uninstalled.pc.in  gtk-addons.pc.in  gtk-addons.prj  gtk-addons.pws  mkinstalldirs
gtk-addons/src/: Makefile.am  Makefile.in  gtkaddons.c  gtkaddons.h  main.c  mglade_rc.h
newuoa/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  bootstrap  config.h.in  config.status  configure  configure.ac  configure.in  configure.in~  newuoa-uninstalled.pc  newuoa-uninstalled.pc.in  newuoa.pc.in  newuoa.prj.bak
newuoa/src/: Makefile.am  Makefile.in  calfun.f
scripts/: setup.sh  teseo_copy_documentation.sh  teseo_create_dist_curr_version.sh  teseo_create_dist_curr_version_bin.sh
teseo-2/: ChangeLog  Doxyfile  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  bootstrap  configure  configure.ac  configure.in  teseo-2.glade  teseo-2.gladep  test2.gladep
teseo-2/help/en/: Makefile.am  Makefile.in  gimp-help.xml  index.html  node1.html  node11.html  node2.html  node3.html  node6.html  node7.html  node8.html  teseo2_user_manual.html  teseo2_user_manual_personal.css
teseo-2/po/: az.gmo  de.gmo  fr.gmo  fr.po  sk.gmo  sk.po  sv.gmo  sv.po  zh_TW.gmo  zh_TW.po
teseo-2/src/: Makefile.am  Makefile.in  brent.c  interface.c  interface.h  main.c  main.h  nr.h  nrutil.h  render.h  sac.h  teseo_bezier_fit.c  teseo_bezier_pfit.c  teseo_bezier_pfit.h  teseo_bezier_point.c  teseo_bezier_point.h  teseo_databox.c  teseo_databox.h  teseo_env.c  teseo_env.h  teseo_filters.c  teseo_filters.h  teseo_gimp_extends.c  teseo_gimp_extends.h  teseo_io.c  teseo_io.h  teseo_lock.c  teseo_lock.h  teseo_main.c  teseo_main.h  teseo_path.c  teseo_path.h  teseo_plot.c  teseo_plot.h  teseo_prototype.c  teseo_resample.c  teseo_resample.h  teseo_sac.c  teseo_sac.h  teseo_session.c  (+14 more)
teseo-dist/gtk-addons/: ChangeLog  configure  configure.in  gtk-addons-uninstalled.pc.in  gtk-addons.pc.in
teseo-dist/gtk-addons/src/: Makefile.am  gtkaddons.c  gtkaddons.h  mglade_rc.c
teseo-dist/newuoa/: Makefile  Makefile.in  config.h  libtool  newuoa.pc  newuoa.pc.in  newuoa.prj  newuoa.pws
teseo-dist/newuoa/src/: Makefile  calfun.f  main.c
teseo-dist/teseo-2/: AUTHORS  ChangeLog  Doxyfile  HACKING  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  configure  configure.ac  configure.in  teseo-2.glade  teseo-2.gladep  test2.glade
teseo-dist/teseo-2/docs/: PAV_Z_1950090412011E1_rit.xcf.bz2
teseo-dist/teseo-2/help/en/: Makefile.am  Makefile.in  gimp-help.xml  index.html  node10.html  node4.html  node5.html  node9.html  teseo2_user_manual.html
teseo-dist/teseo-2/pixmaps/: brain_mri_small.xpm
teseo-dist/teseo-2/po/: az.gmo  az.po  de.gmo  de.po  fr.gmo
teseo-dist/teseo-2/src/: Makefile.am  Makefile.in  f1dim.c  interface.c  linmin.c  main.c  mnbrak.c  nr.h  nrutil.c  powell.c  render.c  render.h  teseo_bezier_fit.c  teseo_bezier_fit.h  teseo_bezier_pfit.c  teseo_bezier_pfit.h  teseo_bezier_point.c  teseo_bezier_point.h  teseo_databox.c  teseo_databox.h  teseo_env.c  teseo_env.h  teseo_filters.c  teseo_filters.h  teseo_gimp_extends.c  teseo_gimp_extends.h  teseo_io.c  teseo_io.h  teseo_lock.c  teseo_lock.h  teseo_main.c  teseo_main.h  teseo_path.c  teseo_path.h  teseo_plot.c  teseo_plot.h  teseo_prototype.h  teseo_resample.c  teseo_resample.h  teseo_sac.c  (+15 more)
teseo-dist/wiechert/: Makefile.in  configure  wiechert.pws
teseo-dist/wiechert/src/: 1_arm-shift-value-en_sub.f  2_arm-shift-slope-en_sub.f  Makefile.in
thirds/soft/newuoa/: Makefile  calfun.f  myresult  myresult-C
thirds/soft/schlupp/: 1_arm-shift-value-en_sub.f  3_geometrical-corr-en.f  Makefile  arm-shift-slope_sub.f  driver1.f  driver2.f  driver3.f  my_driver2.f
utils-no-dist/scripts/: setup.sh  teseo_2_install_bin.sh  teseo_2_install_bin_gimptool.sh  teseo_create_dist_curr_version_bin.sh
