## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES =

AM_CFLAGS =\
	 -Wall\
	 -g

lib_LIBRARIES = libnewuoa.a

libnewuoa_a_SOURCES = \
	bigden.f\
	biglag.f\
	calfun.f\
	cfortran.h\
	newuoa.f\
	newuob.f\
	trsapp.f\
	update.f



libnewuoa_a_LIBADD = 

