## Process this file with automake to produce Makefile.in

helpdatadir = $(DATADIR)/help/en

helpdata_DATA = \
	gimp-help.xml	\
	index.html \
	teseo2_user_manual.html \
	teseo2_user_manual.css \
	img1.gif                snapshot11.eps.gif      snapshot14.eps.gif      snapshot7.eps.gif \
	snapshot1.eps.gif       snapshot12.eps.gif      snapshot2.eps.gif       snapshot8.eps.gif \
	snapshot10.eps.gif      snapshot13.eps.gif      snapshot6.eps.gif       snapshot9.eps.gif

EXTRA_DIST = $(helpdata_DATA)
