## Process this file with automake to produce Makefile.in

helpdatadir = $(DATADIR)/help/en

helpdata_DATA = \
	gimp-help.xml	\
	index.html \
	teseo2_user_manual.html \
	teseo2_user_manual.css \
	img1.gif \
	snapshot1.tiff.eps.gif  snapshot2.tiff.eps.gif  snapshot5.tiff.eps.gif  snapshot8.tiff.eps.gif \
	snapshot10.tiff.eps.gif snapshot3.tiff.eps.gif  snapshot6.tiff.eps.gif  snapshot9.tiff.eps.gif \
	snapshot11.tiff.eps.gif snapshot4.tiff.eps.gif  snapshot7.tiff.eps.gif

EXTRA_DIST = $(helpdata_DATA)
