## Process this file with automake to produce Makefile.in

helpdatadir = $(DATADIR)/help/en

helpdata_DATA = \
	gimp-help.xml	\
	index.html \
	teseo2_user_manual.html \
	teseo2_user_manual_personal.css \
	img1.png img2.png img3.png img4.png \
	snapshot1.png  snapshot2.png  snapshot5.png  snapshot8.png \
	snapshot10.png snapshot3.png  snapshot6.png  snapshot9.png \
	snapshot11.png snapshot4.png  snapshot7.png \
	snapshot12.png snapshot14.png snapshot16.png \
	figure_III.2.png figure_III.3.png 

EXTRA_DIST = $(helpdata_DATA)
