## Process this file with automake to produce Makefile.in

helpdatadir = $(DATADIR)/help/en

helpdata_DATA = \
	gimp-help.xml	\
	index.html \
	teseo2_user_manual.html \
	teseo2_user_manual_personal.css \
	img1.jpg img2.jpg img3.jpg img4.jpg \
	snapshot1.jpg \
	snapshot2.jpg \
	snapshot3.jpg \
	snapshot4.jpg \
	snapshot6.jpg \
	snapshot7.jpg \
	snapshot8.jpg \
	snapshot9.jpg \
	snapshot12.jpg \
	snapshot14.jpg \
	snapshot16.jpg \
	figure_III.2.jpg \
	figure_III.3.jpg 

EXTRA_DIST = $(helpdata_DATA)
